fixed the explore spacing

--- a/index.css
+++ b/index.css
@@ -210,7 +210,7 @@ nav ul li {
   font-size: 4.2rem;
 }
 
-.hero .wrapper:last-child {
+.hero .wrap h2:last-of-type {
   margin-bottom: 0;
 }
 
